Updated portfolio with new changes

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="#" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="https://drive.google.com/file/d/13DQZ2Q0qvqZIaHzxC4IZV7IKv9svgPi5/view" class="btn btn-primary py-4 px-5">Download CV</a></p>
     			</div>
     		</div>
     	</div>
@@ -434,7 +434,7 @@
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/rishabhnmishra/Python_Diwali_Sales_Analysis/blob/main/Diwali_Sales_Analysis.ipynb">Sorting Technique understanding through visualisation </a></h3>
+                <h3 class="heading"><a href="https://github.com/nandini29-cell/Sorting_Visualizer">Sorting Technique understanding through visualisation </a></h3>
                 <p>Sorting Visualizer - An interactive web application that visually demonstrates various sorting algorithms in action, helping users understand their step-by-step execution and performance.</p>
               </div>
             </div>
@@ -552,7 +552,7 @@
           			<span class="icon-paper-plane"></span>
           		</div>
           		<h3 class="mb-4">Email Address</h3>
-	            <p><a href="mailto:info@yoursite.com">np23613@gmail.com</a></p>
+	            <p><a href="mailto:np23613@gmail.com">np23613@gmail.com</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -561,7 +561,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="#">resumelink</a></p>
+	            <p><a href="https://drive.google.com/file/d/13DQZ2Q0qvqZIaHzxC4IZV7IKv9svgPi5/view">resumelink</a></p>
 	          </div>
           </div>
 
