--- a/index.html
+++ b/index.html
@@ -419,11 +419,11 @@
         <div class="row d-flex">
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/nandini-prog/ASP.Net-WebAPi-Project/blob/main/SmartTaskApi.csproj" class="block-20 zoom-effect" style="background-image: url('images/smarttask.png');">
+              <a href="https://github.com/nandini-prog/WebAPI-Project/blob/main/SmartTaskApi.sln" class="block-20 zoom-effect" style="background-image: url('images/smarttask.png');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/nandini-prog/ASP.Net-WebAPi-Project/blob/main/SmartTaskApi.csproj">Smart Task Web API Using ASP.Net</a></h3>
+                <h3 class="heading"><a href="https://github.com/nandini-prog/WebAPI-Project/blob/main/SmartTaskApi.sln">Smart Task Web API Using ASP.Net</a></h3>
                 <p>Smart Task API - A robust and efficient task management API built with ASP.NET Core Web API, featuring task creation, updating, deletion, pagination, and advanced querying.</p>
               </div>
             </div>
@@ -491,14 +491,14 @@
               </div>
             </div>
           </div>
-          <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
+          <!-- <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
                 <strong class="number" data-number="500">0</strong>
                 <span>Cups of coffee</span>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
 	
@@ -539,13 +539,14 @@
 	            <p>Bengaluru, India</p>
 	          </div>
           </div>
-          <div class="col-md-6 col-lg-3 d-flex ftco-animate">
+          <!-- <div class="col-md-6 col-lg-3 d-flex ftco-animate">
           	<div class="align-self-stretch box p-4 text-center">
           		<div class="icon d-flex align-items-center justify-content-center">
           			<span class="icon-phone2"></span>
+					<p>+9100000000000</p>
           		</div>
 	          </div>
-          </div>
+          </div> -->
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
           	<div class="align-self-stretch box p-4 text-center">
           		<div class="icon d-flex align-items-center justify-content-center">
